Add train/test loaders

--- a/intent_classifier.ipynb
+++ b/intent_classifier.ipynb
@@ -12,137 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
     "\n",
-    "from data_processing import CustomDataset"
+    "from data_processing import get_datafrom_tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset silicone/dyda_da to C:/Users/jerem/.cache/huggingface/datasets/silicone/dyda_da/1.0.0/af617406c94e3f78da85f7ea74ebfbd3f297a9665cb54adbae305b03bc4442a5...\n"
+      "Found cached dataset silicone (C:/Users/jerem/.cache/huggingface/datasets/silicone/dyda_da/1.0.0/af617406c94e3f78da85f7ea74ebfbd3f297a9665cb54adbae305b03bc4442a5)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccfb266445ca453088cb0d3984d995b1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data files:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00852f8eb2384b75b5d3dd80b63a8cd2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/2.23M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3c59ed550d740538c28a83f7e11a6dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/206k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a53d0507bad4967a23aceb50146102f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/202k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb7d6d9901034cef89f0532469df774b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/87170 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ca1762a024948418bd8e8075006a8a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/8069 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "710a4f2383514ddba9f4cd06c6a5a157",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/7740 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset silicone downloaded and prepared to C:/Users/jerem/.cache/huggingface/datasets/silicone/dyda_da/1.0.0/af617406c94e3f78da85f7ea74ebfbd3f297a9665cb54adbae305b03bc4442a5. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5749715f1b5d4776acd107b9554209a6",
+       "model_id": "4e097053c60b484fa7ffeabdacfd58c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -266,14 +161,24 @@
        "[87170 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simple_ds = pd.DataFrame(dataset['train'])[[\"Utterance\", \"Label\"]]\n",
-    "simple_ds"
+    "simple_train = pd.DataFrame(dataset['train'])[[\"Utterance\", \"Label\"]]\n",
+    "simple_test = pd.DataFrame(dataset['test'])[[\"Utterance\", \"Label\"]]\n",
+    "simple_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader, test_loader = get_datafrom_tokenizer(simple_train, simple_test)"
    ]
   },
   {
@@ -281,13 +186,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "MAX_LEN = 200\n",
-    "TRAIN_BATCH_SIZE = 8\n",
-    "VALID_BATCH_SIZE = 4\n",
-    "EPOCHS = 1\n",
-    "LEARNING_RATE = 1e-05"
-   ]
+   "source": []
   }
  ],
  "metadata": {
