Add trained model

--- a/intent_classifier.ipynb
+++ b/intent_classifier.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b160199b72e6404d9263a7fca5e48215",
+       "model_id": "7702759e7f3d4412b876e5fceaaf2877",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -531,7 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(params=model.parameters(), lr=1e-05)\n",
+    "optimizer = torch.optim.Adam(params=model.parameters(), lr=1e-3)\n",
     "criterion = nn.CrossEntropyLoss()"
    ]
   },
@@ -547,12 +547,16 @@
     "    correct = 0\n",
     "    total = 0\n",
     "    with torch.no_grad():\n",
-    "        for batch_idx, (inputs, targets) in enumerate(testloader):\n",
-    "            inputs, targets = inputs.to(device), targets.to(device)\n",
-    "            probs = net(inputs)\n",
-    "            loss = criterion(probs, targets)\n",
+    "        for batch_idx, data in enumerate(testloader, 0):\n",
+    "            ids = data['ids'].to(device)\n",
+    "            mask = data['mask'].to(device)\n",
+    "            token_type_ids = data['token_type_ids'].to(device)\n",
+    "            targets = data['targets'].to(device)\n",
+    "\n",
+    "            outputs = model(ids, mask, token_type_ids)\n",
+    "            loss = criterion(outputs, targets)\n",
     "            test_loss += loss.item() * targets.size(0)\n",
-    "            _, predicted = probs.max(1)\n",
+    "            _, predicted = outputs.max(1)\n",
     "            total += targets.size(0)\n",
     "            correct += predicted.eq(targets).sum().item()\n",
     "        return test_loss/total, 1-correct/total"
@@ -639,8 +643,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Train Loss :  1.6077:   0%|          | 5/1363 [00:16<1:13:46,  3.26s/it]\n",
-      "Train Loss :  1.6986:   1%|▏         | 19/1363 [00:31<36:58,  1.65s/it]"
+      "Train Loss :  0.8754 | Test Loss :  0.7434 | Train Error :  32.60% | Test Error :  26.77%: 100%|██████████| 1363/1363 [48:02<00:00,  1.76s/it]\n",
+      "\u001b[A\n",
+      "                                                                                                                                              \n",
+      "\u001b[A\n",
+      "Train Loss :  0.7653 | Test Loss :  0.6459 | Train Error :  28.95% | Test Error :  23.93%: 100%|██████████| 1363/1363 [42:36<00:00,  1.73s/it]\n",
+      "\u001b[A\n",
+      "                                                                                                                                              \n",
+      "\u001b[A\n",
+      "Train Loss :  0.7611 | Test Loss :  0.6305 | Train Error :  28.76% | Test Error :  23.39%: 100%|██████████| 1363/1363 [42:30<00:00,  1.72s/it]\n",
+      "\u001b[A\n",
+      "                                                                                                                                              \n",
+      "\u001b[A\n",
+      "Train Loss :  0.7587 | Test Loss :  0.6567 | Train Error :  28.75% | Test Error :  24.69%: 100%|██████████| 1363/1363 [42:22<00:00,  1.72s/it]\n",
+      "\u001b[A\n",
+      "                                                                                                                                              \n",
+      "\u001b[A\n",
+      "Train Loss :  0.7576 | Test Loss :  0.6503 | Train Error :  28.54% | Test Error :  24.06%: 100%|██████████| 1363/1363 [42:20<00:00,  1.72s/it]\n",
+      "\u001b[A\n",
+      "                                                                                                                                              \n",
+      "\u001b[A\n",
+      "\u001b[A"
      ]
     }
    ],
