--- a/intent_classifier.ipynb
+++ b/intent_classifier.ipynb
@@ -706,10 +706,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# torch.save(model.state_dict(), \"../baseline_saved.pt\")"
+   ]
   }
  ],
  "metadata": {
