Fix device issue

--- a/intent_classifier.ipynb
+++ b/intent_classifier.ipynb
@@ -690,7 +690,7 @@
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "model = BERTClass()\n",
-    "model.to(device)"
+    "model = model.to(device)"
    ]
   },
   {
